# bexar-scraper

./: .gitignore  README.md  pyproject.toml
bexar_scraper/: protest.py
bexar_scraper/data/: database.py  scraper.py
