[tool.poetry]
name = "bexar-scraper"
version = "0.1.0"
description = ""
authors = ["Stephanie Westrum <smallard08@gmail.com>"]
readme = "README.md"
packages = [{include = "bexar_scraper"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = {version = "^0.9.0", extras=["all"]}
bs4 = "^0.0.1"
requests = "^2.31.0"

[tool.poetry.scripts]
protest = "bexar_scraper.protest:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
